MB-60740: Tune ItemPagerVisitor and ExpiredPagerVisitor slow durations

Based on a YCSB Workload D max ops test configured with bucket quota set
to 10, 12.5, 25, 37.5 and 50 GiB and by observing the p99.9 and p99.99
task runtimes.

Change-Id: I92cf5db7e4f810c5bfee8c9e029816472bdc3ea7
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/206325
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Paolo Cocchi <paolo.cocchi@couchbase.com>
Well-Formed: Restriction Checker